--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,6 +43,21 @@
         </div>
     </div>
     <hr class="my-4">
+    <div class="row">
+        <div class="col">
+            <button class="w-100 btn btn-secondary btn-lg" type="button"
+                    th:onclick="|location.href='@{/project/home}'|">
+                프로젝트 홈
+            </button>
+        </div>
+        <div class="col">
+            <button class="w-100 btn btn-secondary btn-lg" type="button"
+                    th:onclick="|location.href='#'|">
+                빈 버튼
+            </button>
+        </div>
+    </div>
+    <hr class="my-4">
 </div> <!-- /container -->
 </body>
 </html>
