--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
@@ -47,6 +47,13 @@
                 <button class="w-100 btn btn-secondary btn-lg"
                         th:onclick="|location.href='@{/}'|"
                         type="button">취소</button>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg"
+                        th:onclick="|location.href='@{/member/add}'|"
+                        type="button">회원가입</button>
             </div>
         </div>
     </form>
