--- a/src/main/resources/templates/project/home.html
+++ b/src/main/resources/templates/project/home.html
@@ -16,8 +16,8 @@
     <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="row my-3">
         <div class="col-md-8 px-5">
-            <p class="fs-5 fw-bold">주목할 만한 프로젝트</p>
-            <div class="row" th:each="row : ${projectGrid}">
+            <p class="fs-5 fw-bold">신규 프로젝트</p>
+            <div class="row" th:each="row : ${projectGrid}" th:if="${rowStat.count <= 4}">
                 <div class="col-md-3" th:each="project : ${row}">
                     <a href="#" th:href="@{|/project/${project.projectId}|}">
                         <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 160px; margin-bottom: 16px" alt="mainImage">
@@ -43,7 +43,31 @@
             <!--*/-->
         </div>
         <div class="col-md-4 px-5">
-            <p class="fs-5 fw-bold">인기 프로젝트</p>
+            <div style="display: flex">
+                <div style="flex: 2"><p class="fs-5 fw-bold">인기 프로젝트</p></div>
+                <div style="flex: 1; margin-top: -6px; margin-right: -40px">
+                    <a class="btn" href="#" role="button"><span class="text-secondary fw-bold" style="font-size: 13px">전체보기</span></a>
+                </div>
+            </div>
+            <p class="text-secondary fw-bold mb-4" style="font-size: 12px; margin-top: -14px" th:text="|${timeNow} 기준|">22.11.24 12:20 기준</p>
+            <div class="row" th:each="project : ${popularProjects}" th:if="${projectStat.count <= 8}">
+                <div class="col-5 pe-4" style="margin-right: -15px">
+                    <a href="#" th:href="@{|/project/${project.projectId}|}">
+                        <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 90px; margin-bottom: 16px" alt="mainImage">
+                    </a>
+                </div>
+                <div class="col-1">
+                    <span class="fw-bold text-danger" th:text="${projectStat.count}">1</span>
+                </div>
+                <div class="col-6">
+                    <p class="text-secondary fw-bold" style="font-size: 11px; margin-bottom: 4px"><a class="text-secondary" href="#" th:text="${project.category.description}">굿즈</a> | <a href="#" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
+                    <p class="fw-bold" style="font-size: 13px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
+                    <p class="text-danger fw-bold" style="font-size: 13px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
+                </div>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-dark px-4 py-2" style="margin: auto; display: block; font-size: 13px; font-weight: bold" th:onclick="|location.href='@{/project/popular'|">인기 프로젝트 전체보기</button>
+            </div>
         </div>
     </div>
 </div> <!-- /container -->
