--- a/src/main/resources/templates/profile/createdProjects.html
+++ b/src/main/resources/templates/profile/createdProjects.html
@@ -12,26 +12,26 @@
     </style>
 </head>
 <body>
-<div class="container-md"">
+<div class="container-md">
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active text-dark fw-bold" href="#">프로필</a>
+        <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}(memberId=${member.id})}">프로필</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-secondary fw-bold" href="#">올린 프로젝트</a>
+        <a class="nav-link active text-dark fw-bold" href="#" th:href="@{/member/{memberId}/createdProject(memberId=${member.id})}">올린 프로젝트</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-secondary fw-bold" href="#">후원한 프로젝트</a>
+        <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/backedProject(memberId=${member.id})}">후원한 프로젝트</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-secondary fw-bold" href="#">팔로워</a>
+        <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/follower(memberId=${member.id})}">팔로워</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-secondary fw-bold" href="#">팔로잉</a>
+        <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/following(memberId=${member.id})}">팔로잉</a>
     </li>
 </ul>
 <div class="my-4" style="font-size: 15px">
-    <span class="text-danger">0</span>개의 프로젝트가 있습니다.
+    <span class="text-danger" th:text="${projectNum}">0</span>개의 프로젝트가 있습니다.
     <div class="my-4">
         <div class="row" th:each="row : ${projectGrid}" th:if="${rowStat.count <= 4}">
             <div class="col-md-3" th:each="project : ${row}">
