--- a/src/main/resources/templates/profile/main.html
+++ b/src/main/resources/templates/profile/main.html
@@ -9,29 +9,31 @@
     </style>
 </head>
 <body>
-    <div class="container-md"">
+    <div class="container-md">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active text-dark fw-bold" href="#">프로필</a>
+                <a class="nav-link active text-dark fw-bold" href="#" th:href="@{/member/{memberId}(memberId=${member.id})}">프로필</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary fw-bold" href="#">올린 프로젝트</a>
+                <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/createdProject(memberId=${member.id})}">올린 프로젝트</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary fw-bold" href="#">후원한 프로젝트</a>
+                <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/backedProject(memberId=${member.id})}">후원한 프로젝트</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary fw-bold" href="#">팔로워</a>
+                <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/follower(memberId=${member.id})}">팔로워</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary fw-bold" href="#">팔로잉</a>
+                <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/following(memberId=${member.id})}">팔로잉</a>
             </li>
         </ul>
-        <div class="my-4" style="font-size: 15px">
+        <div class="my-4">
             <div class="mb-2">
-                <a class="btn btn-outline-dark bg-light px-2 py-1 fw-bold" style="font-size: 14px" href="#" role="button">소개 등록/변경</a>
+                <a class="btn btn-outline-dark bg-light px-2 py-1 fw-bold" style="font-size: 14px" href="#" th:href="@{/member/{memberId}/edit(memberId=${member.id})}" th:if="${#session != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).id == member.id}" role="button">소개 등록/변경</a>
             </div>
-            안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요
+            <p style="font-size: 15px" th:text="${member.info}">
+            안녕하세요
+            </p>
         </div>
     </div>
 </body>
