--- a/src/main/resources/templates/project/home.html
+++ b/src/main/resources/templates/project/home.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<div class="container-md" th:object="${project}">
+<div class="container-md">
     <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="row my-3">
         <div class="col-md-8 px-5">
