--- a/src/main/resources/templates/profile/createdProjects.html
+++ b/src/main/resources/templates/profile/createdProjects.html
@@ -39,7 +39,7 @@
                     <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 240px; margin-bottom: 18px" alt="mainImage">
                 </a>
                 <div>
-                    <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:text="${project.category.description}">굿즈</a> | <a href="#" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
+                    <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
                     <p class="fw-bold" style="font-size: 16px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
                     <p class="text-danger fw-bold" style="font-size: 15px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
                 </div>
