--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -6,6 +6,9 @@
           href="/static/css/bootstrap.min.css" rel="stylesheet">
     <script th:src="@{/js/bootstrap.bundle.js}" src="/static/js/bootstrap.bundle.js"></script>
     <style>
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -13,9 +16,9 @@
     <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="py-4 mb-4">
         <div class="text-center my-3 fs-4">
-            <span class="badge text-bg-secondary" th:text="*{category.description}">굿즈</span>
+            <a class="badge text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=*{category.name()})}" th:text="*{category.description}">굿즈</a>
         </div>
-        <h1 class="text-center fw-bold" th:text="*{title}"><strong>조향사가 직접 만든 천연 퍼퓸 샴푸와 비누</strong></h1>
+        <h1 class="text-center fw-bold" th:text="*{title}">조향사가 직접 만든 천연 퍼퓸 샴푸와 비누</h1>
     </div>
     <div class="row">
         <div class="col-md-7 px-5 my-auto">
@@ -78,18 +81,22 @@
                 <div class="card-body px-4">
                     <p class="my-3 fw-bold fs-3" th:text="|*{{price}}원|">9,900원</p>
                     <p class="my-3" th:text="*{description}">(얼리버드) 유니콘 비누 4종 중 택1 (배송비 포함)</p>
-                    <div class="d-grid col-12 mx-auto my-3">
-                        <button class="btn btn-danger fw-bold" style="height: 3em" type="button">이 옵션으로 후원하기</button>
-                    </div>
+                    <form th:action="@{/project/{projectId}/sponsor/1(projectId=${project.id})}" method="post">
+                        <div class="d-grid col-12 mx-auto my-3">
+                            <button class="btn btn-danger fw-bold" style="height: 3em" type="submit">이 옵션으로 후원하기</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="card my-3" th:object="${project.rewards[1]}">
                 <div class="card-body px-4">
                     <p class="my-3 fw-bold fs-3" th:text="|*{{price}}원|">19,000원</p>
                     <p class="my-3" th:text="*{description}">(얼리버드) 유니콘 비누 4종 중 택2 (배송비 포함)</p>
-                    <div class="d-grid col-12 mx-auto my-3">
-                        <button class="btn btn-danger fw-bold" style="height: 3em" type="button">이 옵션으로 후원하기</button>
-                    </div>
+                    <form th:action="@{/project/{projectId}/sponsor/2(projectId=${project.id})}" method="post">
+                        <div class="d-grid col-12 mx-auto my-3">
+                            <button class="btn btn-danger fw-bold" style="height: 3em" type="submit">이 옵션으로 후원하기</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
