--- a/src/main/resources/templates/project/home.html
+++ b/src/main/resources/templates/project/home.html
@@ -23,7 +23,7 @@
                         <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 160px; margin-bottom: 16px" alt="mainImage">
                     </a>
                     <div>
-                        <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:text="${project.category.description}">굿즈</a> | <a href="#" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
+                        <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
                         <p class="fw-bold" style="font-size: 14px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
                         <p class="text-danger fw-bold" style="font-size: 14px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
                     </div>
@@ -46,7 +46,7 @@
             <div style="display: flex">
                 <div style="flex: 2"><p class="fs-5 fw-bold">인기 프로젝트</p></div>
                 <div style="flex: 1; margin-top: -6px; margin-right: -40px">
-                    <a class="btn" href="#" role="button"><span class="text-secondary fw-bold" style="font-size: 13px">전체보기</span></a>
+                    <a class="btn" href="#" th:href="@{/project/popular}" role="button"><span class="text-secondary fw-bold" style="font-size: 13px">전체보기</span></a>
                 </div>
             </div>
             <p class="text-secondary fw-bold mb-4" style="font-size: 12px; margin-top: -14px" th:text="|${timeNow} 기준|">22.11.24 12:20 기준</p>
@@ -60,13 +60,13 @@
                     <span class="fw-bold text-danger" th:text="${projectStat.count}">1</span>
                 </div>
                 <div class="col-6">
-                    <p class="text-secondary fw-bold" style="font-size: 11px; margin-bottom: 4px"><a class="text-secondary" href="#" th:text="${project.category.description}">굿즈</a> | <a href="#" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
+                    <p class="text-secondary fw-bold" style="font-size: 11px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
                     <p class="fw-bold" style="font-size: 13px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
                     <p class="text-danger fw-bold" style="font-size: 13px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
                 </div>
             </div>
             <div>
-                <button type="button" class="btn btn-outline-dark px-4 py-2" style="margin: auto; display: block; font-size: 13px; font-weight: bold" th:onclick="|location.href='@{/project/popular'|">인기 프로젝트 전체보기</button>
+                <button type="button" class="btn btn-outline-dark px-4 py-2" style="margin: auto; display: block; font-size: 13px; font-weight: bold" th:onclick="|location.href='@{/project/popular}'|">인기 프로젝트 전체보기</button>
             </div>
         </div>
     </div>
