--- a/src/main/resources/templates/profile/following.html
+++ b/src/main/resources/templates/profile/following.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <script th:src="@{/js/bootstrap.bundle.js}" src="/static/js/bootstrap.bundle.js"></script>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-
+<div class="container-md">
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}(memberId=${memberId})}">프로필</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/createdProject(memberId=${memberId})}">올린 프로젝트</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/backedProject(memberId=${memberId})}">후원한 프로젝트</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-secondary fw-bold" href="#" th:href="@{/member/{memberId}/follower(memberId=${memberId})}">팔로워</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active text-dark fw-bold" href="#" th:href="@{/member/{memberId}/following(memberId=${memberId})}">팔로잉</a>
+        </li>
+    </ul>
+    <div class="my-4">
+        <div class="mx-3 my-3 px-3 pt-3 border border-dark-50">
+            <p><a class="text-black fw-bold" href="#">느리게걷다</a>&nbsp;<span class="text-secondary fw-bold">&gt;</span></p>
+            <p class="text-secondary" style="margin-top: -10px; font-size: 14px">바쁘게 흘러가는 현대인의 일상에서 잠시 걸음을 늦추고 돌아볼 만한 소박한 가치와 작은 지혜, 휴식 같은 이야기들을 책으로 펴내고 싶은 사람들 :)</p>
+            <hr>
+            <p><a class="text-black fw-bold" href="#">느리게걷다</a>&nbsp;<span class="text-secondary fw-bold">&gt;</span></p>
+            <p class="text-secondary" style="margin-top: -10px; font-size: 14px">바쁘게 흘러가는 현대인의 일상에서 잠시 걸음을 늦추고 돌아볼 만한 소박한 가치와 작은 지혜, 휴식 같은 이야기들을 책으로 펴내고 싶은 사람들 :)</p>
+            <hr>
+            <p><a class="text-black fw-bold" href="#">느리게걷다</a>&nbsp;<span class="text-secondary fw-bold">&gt;</span></p>
+            <p class="text-secondary" style="margin-top: -10px; font-size: 14px">바쁘게 흘러가는 현대인의 일상에서 잠시 걸음을 늦추고 돌아볼 만한 소박한 가치와 작은 지혜, 휴식 같은 이야기들을 책으로 펴내고 싶은 사람들 :)</p>
+        </div>
+    </div>
+</div>
 </body>
-</html>
