--- a/src/main/resources/templates/profile/main.html
+++ b/src/main/resources/templates/profile/main.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="container-md">
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
+        <div th:replace="~{profile/profileHeader :: profileHeader}"></div>
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active text-dark fw-bold" href="#" th:href="@{/member/{memberId}(memberId=${memberId})}">프로필</a>
@@ -28,9 +30,11 @@
             </li>
         </ul>
         <div class="my-4">
+            <!--
             <div class="mb-2">
                 <a class="btn btn-outline-dark bg-light px-2 py-1 fw-bold" style="font-size: 14px" href="#" th:href="@{/member/{memberId}/edit(memberId=${member.id})}" th:if="${#session != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).id == member.id}" role="button">소개 등록/변경</a>
             </div>
+            -->
             <p style="font-size: 15px" th:text="${member.info}">
             안녕하세요
             </p>
