--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,64 +8,67 @@
         </style>
     </head>
     <body>
-        <div th:fragment="navbar">
-            <nav class="navbar bg-white">
-                <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{/}" href="#"><img th:src="@{/image/logo.png}" src="/static/image/logo.png" alt="Tumblbug" width="100%" height="100%"></a>
-                    <div class="d-flex justify-content-end">
-                        <a class="btn" href="#" th:href="@{/project/add}" role="button"><strong>프로젝트 올리기</strong></a>
-                        <a class="btn" href="#" th:href="@{/login}" role="button" th:if="${#session == null or #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) == null}"><strong>로그인/회원가입</strong></a>
-                        <li class="nav-item dropdown" style="display: inline" th:if="${#session != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) != null}">
-                            <a class="nav-link active dropdown-toggle fw-bold" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).username}">
-                                username
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" th:href="@{/member/{memberId}(memberId=${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).id})}">프로필</a></li>
-                                <form th:action="@{/logout}" method="post">
-                                    <li><button class="dropdown-item" type="submit">로그아읏</button></li>
-                                </form>
-                            </ul>
-                        </li>
-                    </div>
-                </div>
-            </nav>
-            <nav class="navbar navbar-expand-lg bg-white">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link active dropdown-toggle" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <strong>카테고리</strong>
+        <div class="container-md">
+            <div th:fragment="navbar">
+                <nav class="navbar bg-white">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" th:href="@{/}" href="#"><img th:src="@{/image/logo.png}" src="/static/image/logo.png" alt="Tumblbug" width="100%" height="100%"></a>
+                        <div class="d-flex justify-content-end">
+                            <a class="btn" href="#" th:href="@{/project/add}" role="button"><strong>프로젝트 올리기</strong></a>
+                            <a class="btn" href="#" th:href="@{/login}" role="button" th:if="${#session == null or #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) == null}"><strong>로그인/회원가입</strong></a>
+                            <li class="nav-item dropdown btn btn-outline-secondary ms-3" style="display: inline; width: 180px; height: 40px" th:if="${#session != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) != null}">
+                                <img class="rounded-circle float-start" width="25" height="25" src="/static/image/defaultUserImage.png" th:src="|/project/images/${#session.getAttribute('loginMember').userImageStoreFileName}|">
+                                <a class="nav-link active dropdown-toggle fw-bold" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).username}">
+                                    username
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#" th:href="@{/project/category/book}">도서</a></li>
-                                    <li><a class="dropdown-item" href="#" th:href="@{/project/category/film}">영화</a></li>
-                                    <li><a class="dropdown-item" href="#" th:href="@{/project/category/goods}">굿즈</a></li>
+                                    <li><a class="dropdown-item" href="#" th:href="@{/member/{memberId}(memberId=${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).id})}">프로필</a></li>
+                                    <form th:action="@{/logout}" method="post">
+                                        <li><button class="dropdown-item" type="submit">로그아읏</button></li>
+                                    </form>
                                 </ul>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/home}"><strong>홈</strong></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/popular}"><strong>인기</strong></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/new}"><strong>신규</strong></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/imminent}"><strong>마감임박</strong></a>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2 bg-light" type="search" placeholder="검색어를 입력해주세요." aria-label="Search" style="width: 180px; font-size:0.8em">
-                            <button class="btn btn-outline-dark" type="submit"><span style="font-size:0.8em">Search</span></button>
-                        </form>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+                <nav class="navbar navbar-expand-lg bg-white">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link active dropdown-toggle" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <strong>카테고리</strong>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#" th:href="@{/project/category/BOOK}">도서</a></li>
+                                        <li><a class="dropdown-item" href="#" th:href="@{/project/category/FILM}">영화</a></li>
+                                        <li><a class="dropdown-item" href="#" th:href="@{/project/category/GOODS}">굿즈</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/home}"><strong>홈</strong></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/popular}"><strong>인기</strong></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/new}"><strong>신규</strong></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" style="color: black" aria-current="page" href="#" th:href="@{/project/imminent}"><strong>마감임박</strong></a>
+                                </li>
+                            </ul>
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2 bg-light" type="search" placeholder="검색어를 입력해주세요." aria-label="Search" style="width: 180px; font-size:0.8em">
+                                <button class="btn btn-outline-dark" type="submit"><span style="font-size:0.8em">Search</span></button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </body>
 </html>
