--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -31,8 +31,8 @@
                         </div>
                     </div>
                 </nav>
-                <nav class="navbar navbar-expand-lg bg-white">
-                    <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg bg-white border-bottom">
+                    <div class="container-fluid" style="margin-bottom: -5px">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
