--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -1,1 +1,47 @@
-list
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <script th:src="@{/js/bootstrap.bundle.js}" src="/static/js/bootstrap.bundle.js"></script>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+<div class="container-md">
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+    <p class="my-4"><span class="text-danger" th:text="${pagingDto.getTotal()}">100</span>개의 프로젝트가 있습니다</p>
+    <div class="row" th:each="row : ${projectGrid}" th:if="${rowStat.count <= 4}">
+        <div class="col-md-3" th:each="project : ${row}">
+            <a href="#" th:href="@{|/project/${project.projectId}|}">
+                <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 240px; margin-bottom: 16px" alt="mainImage">
+            </a>
+            <div>
+                <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
+                <p class="fw-bold" style="font-size: 14px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
+                <p class="text-danger fw-bold" style="font-size: 14px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${pagingDto.hasPrev()} ? _ : disabled">
+                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${pagingDto.startPage - 1}, limit=${pagingDto.getLimit()})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li th:each="i: ${#numbers.sequence(pagingDto.getStartPage(), pagingDto.getEndPage(), 1)}" class="page-item"><a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${i}, limit=${pagingDto.getLimit()})}" th:text="${i}">1</a></li>
+            <li class="page-item" th:classappend="${pagingDto.hasNext()} ? _ : disabled">
+                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${pagingDto.endPage + 1}, limit=${pagingDto.getLimit()})}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+</div>
