--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,14 +15,14 @@
                         <a class="navbar-brand" th:href="@{/}" href="#"><img th:src="@{/image/logo.png}" src="/static/image/logo.png" alt="Tumblbug" width="100%" height="100%"></a>
                         <div class="d-flex justify-content-end">
                             <a class="btn" href="#" th:href="@{/project/add}" role="button"><strong>프로젝트 올리기</strong></a>
-                            <a class="btn" href="#" th:href="@{/login}" role="button" th:if="${#session == null or #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) == null}"><strong>로그인/회원가입</strong></a>
-                            <li class="nav-item dropdown btn btn-outline-secondary ms-3" style="display: inline; width: 180px; height: 40px" th:if="${#session != null and #session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER) != null}">
-                                <img class="rounded-circle float-start" width="25" height="25" src="/static/image/defaultUserImage.png" th:src="|/project/images/${#session.getAttribute('loginMember').userImageStoreFileName}|">
-                                <a class="nav-link active dropdown-toggle fw-bold" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).username}">
+                            <a class="btn" href="#" th:href="@{/login}" role="button" th:unless="${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGGED_IN) == true}"><strong>로그인/회원가입</strong></a>
+                            <li class="nav-item dropdown btn btn-outline-secondary ms-3" style="display: inline; width: 180px; height: 40px" th:if="${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGGED_IN) == true}" th:with="imageFileName=${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER_IMAGE_STORE_FILENAME)}">
+                                <img class="rounded-circle float-start" width="25" height="25" src="/static/image/defaultUserImage.png" th:src="|/project/images/${imageFileName}|">
+                                <a class="nav-link active dropdown-toggle fw-bold" style="color: black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER_USERNAME)}">
                                     username
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#" th:href="@{/member/{memberId}(memberId=${#session.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER).id})}">프로필</a></li>
+                                    <li><a class="dropdown-item" href="#" th:href="@{/member/{memberId}(memberId=${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER_ID)})}">프로필</a></li>
                                     <form th:action="@{/logout}" method="post">
                                         <li><button class="dropdown-item" type="submit">로그아읏</button></li>
                                     </form>
