--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -76,9 +76,10 @@
                         <a class="text-black mx-2 fw-bold" th:text="*{creator.username}" href="#" th:href="@{/member/{memberId}(memberId=*{creator.id})}">벨망</a>
                     </div>
                     <p class="card-text" th:text="*{creator.info}">벨망은 조향사와 디자이너가 함께하는 프로젝트 그룹입니다.</p>
-                    <form th:action="@{/member/{memberId}/follow(memberId=*{creator.id})}" method="post">
+                    <form id="followButton" th:action="@{/member/{memberId}/follow(memberId=*{creator.id})}" method="post">
                         <input type="hidden" name="redirectURI" th:value="|${#request.getRequestURI()}#followButton|">
-                        <button id="followButton" class="btn btn-secondary" style="width: 100%" type="submit">+ 팔로우</button>
+                        <button class="btn btn-secondary" style="width: 100%" type="submit" th:if="${followButtonActive}">+ 팔로우</button>
+                        <button class="btn btn-secondary" style="width: 100%" type="submit" th:if="${followingButtonActive}">&#x2713; 팔로잉</button>
                     </form>
                 </div>
             </div>
