--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -14,15 +14,33 @@
 <body>
 <div class="container-md" th:object="${project}">
     <div th:replace="~{fragments/navbar :: navbar}"></div>
-    <div class="py-4 mb-4">
+    <div class="py-4 mb-3">
         <div class="text-center my-3 fs-4">
-            <a class="badge text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=*{category.name()})}" th:text="*{category.description}">굿즈</a>
+            <a class="badge text-secondary" style="background-color: #dddddd" href="#" th:href="@{/project/category/{categoryName}(categoryName=*{category.name()})}" th:text="*{category.description}">굿즈</a>
         </div>
         <h1 class="text-center fw-bold" th:text="*{title}">조향사가 직접 만든 천연 퍼퓸 샴푸와 비누</h1>
     </div>
     <div class="row">
         <div class="col-md-7 px-5 my-auto">
-            <img src="/static/image/mainImage.png" th:src="|/project/images/*{mainImage.storeFileName}|" style="width: 100%; height: auto" alt="mainImage"></div>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/static/image/mainImage.png" th:src="|/project/images/*{mainImage.storeFileName}|" class="d-block w-100" height="500" alt="mainImage">
+                    </div>
+                    <div class="carousel-item" th:each="subImage : *{subImages}">
+                        <img src="/static/image/defaultUserImage.png" th:src="|/project/images/${subImage.storeFileName}|" class="d-block w-100" height="500" th:alt="|subImage${subImageStat.count}|" >
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
         <div class="col-md-5 px-5 pt-3" style="font-size: 1em">
             모인금액<br/>
             <span style="font-size: 2.5em" th:text="*{{currentSponsorship}}">10,000,000</span> 원&nbsp;&nbsp;
@@ -51,7 +69,7 @@
             </div>
         </div>
     </div>
-    <hr class="my-3">
+    <hr class="mt-5 mb-3">
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link active text-dark fw-bold" aria-current="page" href="#">프로젝트 계획</a>
