--- a/src/main/resources/templates/project/detail/fragments/postList.html
+++ b/src/main/resources/templates/project/detail/fragments/postList.html
@@ -14,41 +14,35 @@
 <body>
 <div class="container-md">
     <div th:fragment="postList">
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs" id="nav-tab">
             <li class="nav-item">
-                <a class="nav-link text-secondary fw-bold" aria-current="page" href="#">프로젝트 계획</a>
+                <a class="nav-link text-secondary fw-bold" aria-current="page" href="#" th:href="@{/project/{projectId}#nav-tab(projectId=${project.id})}">프로젝트 계획</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-dark fw-bold" href="#">커뮤니티</a>
+                <a class="nav-link active text-dark fw-bold">커뮤니티</a>
             </li>
         </ul>
         <div class="row">
             <div class="col-md-7 px-3 py-5">
                 <div>
                     <div class="btn btn-outline-secondary bg-light w-100 ps-4 pt-3 pe-4 mb-3 position-relative" style="height: 60px; text-align: start;">
-                        <a href="#" class="stretched-link text-secondary">창작자에게 응원의 한마디!</a>
+                        <a href="#" th:href="@{/project/{projectId}/community/add(projectId=${project.id})}" class="stretched-link text-secondary">창작자에게 응원의 한마디!</a> <!--로그인 되어 있는 경우-->
                         <img src="/static/image/pencil.png" style="float: right" width="25" height="25">
                     </div>
                 </div>
-                <div class="p-2" style="font-size: 15px;">
-                    <img src="/static/image/defaultUserImage.png" class="rounded-circle" width="40" height="40">
-                    <span class="fw-bold d-inline-block ms-2">사용자명</span>
-                    <p class="pt-3">
-                        포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트
-                    </p>
-                    <p class="text-secondary float-start">2022.12.07</p>
-                    <button class="btn btn-danger float-end" style="width: 50px; height: 35px; font-size: 12px; margin-top: -9px">삭제</button>
-                </div>
-                <hr style="clear: both">
-                <div class="p-2" style="font-size: 15px;">
-                    <img src="/static/image/defaultUserImage.png" class="rounded-circle" width="40" height="40">
-                    <span class="fw-bold d-inline-block ms-2">사용자명</span>
-                    <p class="pt-3">
-                        포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트
-                    </p>
-                    <p class="text-secondary float-start">2022.12.07</p>
-                    <button class="btn btn-danger float-end" style="width: 50px; height: 35px; font-size: 12px; margin-top: -9px">삭제</button>
-                </div>
+                <th:block th:each="post : ${project.communityPosts}">
+                    <div class="p-2" style="font-size: 15px;" th:object="${post}">
+                        <img src="/static/image/defaultUserImage.png" th:src="|/project/images/*{author.userImage.storeFileName}|" class="rounded-circle" width="40" height="40">
+                        <span class="fw-bold d-inline-block ms-2" th:text="*{author.username}">사용자명</span>
+                        <p class="pt-3" th:text="*{content}">
+                            포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트
+                        </p>
+                        <p class="text-secondary float-start" th:text="*{createDate}">2022.12.07</p>
+                        <button class="btn btn-danger float-end" style="width: 50px; height: 35px; font-size: 12px; margin-top: -9px">삭제</button>
+                    </div>
+                    <hr th:unless="${postStat.last}" style="clear: both">
+                </th:block>
+
             </div>
             <div class="col-md-5 px-5 my-4" th:replace="~{project/detail/fragments/profileReward :: profileReward}" style="font-size: 1em">
                 <div class="card my-4">
