--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -52,7 +52,7 @@
         <div class="row mt-3">
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        th:onclick="|location.href='@{/signup}'|"
+                        th:onclick="|location.href='@{/signup(redirectURI=${param.redirectURI})}'|"
                         type="button">회원가입</button>
             </div>
         </div>
