--- a/src/main/resources/templates/project/detail/fragments/postList.html
+++ b/src/main/resources/templates/project/detail/fragments/postList.html
@@ -27,7 +27,7 @@
                 <div>
                     <div class="btn btn-outline-secondary bg-light w-100 ps-4 pt-3 pe-4 mb-3 position-relative" style="height: 60px; text-align: start;">
                         <a href="#" th:href="@{/project/{projectId}/community/add(projectId=${project.id})}" class="stretched-link text-secondary">창작자에게 응원의 한마디!</a> <!--로그인 되어 있는 경우-->
-                        <img src="/static/image/pencil.png" style="float: right" width="25" height="25">
+                        <img src="/static/image/pencil.png" th:src="@{/image/pencil.png}" style="float: right" width="25" height="25">
                     </div>
                 </div>
                 <th:block th:each="post : ${project.communityPosts}">
@@ -35,10 +35,12 @@
                         <img src="/static/image/defaultUserImage.png" th:src="|/project/images/*{author.userImage.storeFileName}|" class="rounded-circle" width="40" height="40">
                         <span class="fw-bold d-inline-block ms-2" th:text="*{author.username}">사용자명</span>
                         <p class="pt-3" th:text="*{content}">
-                            포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트 내용 포스트
+                            포스트 내용
                         </p>
-                        <p class="text-secondary float-start" th:text="*{createDate}">2022.12.07</p>
+                        <p class="text-secondary float-start" th:text="*{{createDate}}">2022.12.07</p>
+                        <form th:if="${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER_ID)} != null and ${#request.getAttribute(T(hello.tumblbug.controller.SessionConst).LOGIN_MEMBER_ID).equals(post.author.id)}" th:action="@{/project/{projectId}/community/{postId}/delete(projectId=${project.id}, postId=*{id})}" method="post">
                         <button class="btn btn-danger float-end" style="width: 50px; height: 35px; font-size: 12px; margin-top: -9px">삭제</button>
+                        </form>
                     </div>
                     <hr th:unless="${postStat.last}" style="clear: both">
                 </th:block>
